--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section id="home">
-      <h1>Welcome to my side</h1>
+      <h1>Welcome to my site</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident alias, in sapiente dolorum dignissimos
         aperiam.</p>
     </section>
