--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </section>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
